--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,16 +1,22 @@
+<%= tinymce_assets %>
+<%= tinymce %>
+
 <%= form_for(event) do |f| %>
 
 <div class='row'>
   <div class='col-md-10 offset-md-1'>
-    <div class='card card-block square-item'>
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <br>
-      <%= f.label :size_ids, 'Select Available Shirt Sizes (Ctrl click to select multiple)' %>
-      <%= f.select :size_ids, Size.all.collect {|x| [x.label, x.id]}, {}, class: 'form-control', :multiple => true, size: 6 %>
-      <%= f.submit %>
-      
-      <% end %>
-    </div>
+    <%= f.label :name %>
+    <%= f.text_field :name, class: 'form-control' %>
+    <br>
+    
+    <%= f.label :desc, "Event Summary" %>
+    <%= f.text_area :desc, class: "tinymce", :row => 350, :cols => 120 %>
+    <%= f.label :teaser, "Event Teaser" %>
+    <%= f.text_area :teaser, class: 'form-control' %>
+    <%= f.label :size_ids, 'Select Available Shirt Sizes (Ctrl click to select multiple)' %>
+    <%= f.select :size_ids, Size.all.collect {|x| [x.label, x.id]}, {}, class: 'form-control', :multiple => true, size: 6 %>
+    <%= f.submit %>
+    
+    <% end %>
   </div>
 </div>
