--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,5 @@
 <%= render 'layouts/messages' %>
-
+<%= render 'admin/event_admin', event: @event %>
 <div class="row">
   <!--<img src="https://placehold.it/1200x250/39BDBD/ffffff" class="img-fluid mx-auto d-block" >-->
   <%= image_tag "mountain-wide.jpeg", class:'img-fluid mx-auto d-block', :style => 'max-height:350px' %>
