--- a/app/views/contributions/new.html.erb
+++ b/app/views/contributions/new.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/page_title', title: 'New Contribution' %>
+<%= render 'shared/page_title', title: 'New Contribution for ' + @event.name %>
 
 <div class='row'>
     <div class='col-md-6 offset-md-3'>
