--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -10,7 +10,7 @@
   <div class='col-md-6 offset-md-3'>
     <div class='card card-block square-item'>
       <%= f.label :fee, 'Registration Fee' %>
-      <%= f.number_field :fee, class: 'form-control' %>
+      <%= f.select(:fee, options_for_select(@event.registration_fees.collect {|x| [x.name + ' - $' + x.amount.to_s + '0', x.amount]}), {}, class: 'form-control') %>
       
       <% if event.has_shirt? %>
         <%= f.label :shirt_size %>
@@ -28,7 +28,7 @@
         <%= g.text_field :name, class: 'form-control' %>
         
         <%= g.label :fee, 'Guest Registration Fee' %>
-        <%= g.number_field :fee, class: 'form-control' %>
+        <%= g.select(:fee, options_for_select(@event.registration_fees.collect {|x| [x.name + ' - $' + x.amount.to_s + '0', x.amount]}), {}, class: 'form-control') %>
         
         <% if event.has_shirt? %>
           <%= g.label :shirt_size %>
