offline contributions and init wicked form for events

--- a/app/views/attendees/show.html.erb
+++ b/app/views/attendees/show.html.erb
@@ -13,7 +13,7 @@
         </div>
         <div class='row'>
             <div class='card card-block'>
-                <h3 class='card-title'>Guests <%= link_to 'Add Guest', new_event_attendee_path(@event, @attendee), class: 'btn btn-primary btn-square float-xs-right' %></h3>
+                <h3 class='card-title'>Guests <%= link_to 'Add Guest', new_event_attendee_guest_path(@event, @attendee), class: 'btn btn-primary btn-square float-xs-right' %></h3>
                 <br>
                 <table class='table'>
                     <thead>
