--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <%= render 'admin/event_admin', event: @event %>
 <div class="row">
   <!--<img src="https://placehold.it/1200x250/39BDBD/ffffff" class="img-fluid mx-auto d-block" >-->
-  <%= image_tag "mountain-wide.jpeg", class:'img-fluid mx-auto d-block', :style => 'max-height:350px' %>
+  <%= image_tag "walk-wide.jpeg", class:'img-fluid mx-auto d-block', :style => 'max-height:460px' %>
   
 </div>
 <div class='row mt-1'>
