--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <!--<img src="https://placehold.it/1200x250/39BDBD/ffffff" class="img-fluid mx-auto d-block" >-->
   <%= image_tag "walk-wide.jpeg", class:'img-fluid mx-auto d-block', :style => 'max-height:460px' %>
-  
+  <img src='<%= asset_path("walk-wide.jpg") %>' class='img-fluid mx-auto d-block', style='max-height:460px'>
 </div>
 <div class='row mt-1'>
   <div class='col-xs-8 pl-0'>
