--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,1 +1,2 @@
+<%= image_tag(@organization.org_cover.url, class: 'img-fluid mx-auto d-block') if @organization.org_cover? %>
 <%= @organization.name %>
