--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,8 @@
 <%= render 'admin/event_admin', event: @event %>
 <div class="row">
   <!--<img src="https://placehold.it/1200x250/39BDBD/ffffff" class="img-fluid mx-auto d-block" >-->
-  <img src='<%= asset_path("walk-wide.jpg") %>' class='img-fluid mx-auto d-block', style='max-height:460px'>
+  <%= image_tag(@event.event_cover.url, class: 'img-fluid mx-auto d-block', style: 'max-height:460px') if @event.event_cover? %>
+  <!--<img src='<#%= asset_path("walk-wide.jpg") %>' class='img-fluid mx-auto d-block', style='max-height:460px'>-->
 </div>
 <div class='row mt-1'>
   <div class='col-xs-8 pl-0'>
