--- a/app/views/contributions/_form.html.erb
+++ b/app/views/contributions/_form.html.erb
@@ -24,6 +24,12 @@
   </div>
   <div class='row'>
     <div class='col-xs-12'>
+    <%= f.label :Comment %>
+    <%= f.text_area :comment, class: 'form-control' %>
+    </div>
+  </div>
+  <div class='row'>
+    <div class='col-xs-12'>
     <%= f.submit 'Submit Contribute', class: 'btn btn-square btn-block btn-success mt-1' %>
     </div>
   </div>
