--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,3 +65,37 @@ body {
     transform: scale(1.3, 1.3);
     opacity: .8;
 }
+
+.nav-float {
+    z-index: 100;
+    position: fixed;
+    top: 10%;
+    left: 3%;
+}
+
+.nav-tabs > li, .nav-pills > .nav-item {
+    float:none;
+    display:inline-block;
+}
+
+.nav-pills {
+    text-align:center;
+}
+
+.card-highlight {
+    border-left: #20B2AA 6px solid;
+    border-radius: 10px .25rem .25rem 10px;
+
+}
+
+.card-height {
+    min-height: 468px;
+}
+
+.hiddenRow {
+    padding: 0 !important;
+}
+
+.w {
+    color:white;
+}
