--- a/app/views/events/event_attributes.html.erb
+++ b/app/views/events/event_attributes.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="col-xs-3 text-xs-center">
         <div class="card card-block card-callout mb-0">
-          <h1>0</h1>
+          <h1><%= @event.teams.count %></h1>
           <p>Teams</p>
         </div>
       </div>
@@ -146,7 +146,7 @@
     <div class="row my-1">
       <div class="col-xs-3 text-xs-center">
         <div class="card card-block card-callout mb-0">
-          <h1><%= @event.contributions.count %></h1>
+          <h1 id='contribution-total'><%= @event.contributions.count %></h1>
           <p>Total Contributions</p>
         </div>
       </div>
@@ -158,13 +158,13 @@
       </div>
       <div class="col-xs-3 text-xs-center">
         <div class="card card-block card-callout mb-0">
-          <h1><%= @event.contributions.where(:contribution_type => 'offline').count %></h1>
+          <h1 id='contribution-count'><%= @event.contributions.where(:contribution_type => 'offline').count %></h1>
           <p>Offline Contributions</p>
         </div>
       </div>
       <div class="col-xs-3 text-xs-center">
         <div class="card card-block card-callout mb-0">
-          <h1><%= number_to_currency(@event.raised) %></h1>
+          <h1 id='contribution-summary'><%= number_to_currency(@event.raised) %></h1>
           <p>Total Raised</p>
         </div>
       </div>
@@ -179,19 +179,31 @@
                 <th>Name</th>
                 <th>Amount</th>
                 <th>Honoree</th>
+                <th>Comment</th>
                 <th>Created On</th>
                 <th>Actions</th>
               </tr>
             </thead>
             <tbody id='online_contributions'>
-              <% @event.contributions.where(:contribution_type => 'online').each do |contribution| %>
+              <% @event.contributions.where(:contribution_type => 'online').each_with_index do |contribution, index| %>
                 <tr>
                   <td>Anonymous</td>
                   <td><%= number_to_currency(contribution.amount) %></td>
-                  <td><% if !contribution.in_honor? %>N/A <% else %> <%= contribution.honoree %> <% end %></td>
+                  <td><% if contribution.in_honor? %> <%= contribution.honoree %>  <% else %>  N/A <% end %></td>
+                  <td>
+                    <% if !contribution.comment.blank? %><a class="btn btn-primary w" data-toggle="collapse" href='#' data-target="#collapseComment<%= index %>" aria-expanded="false" aria-controls="collapseExample">Expand</a>
+                    <% else %>
+                    N/A
+                    <% end %>
+                  </td>
                   <td><%= contribution.created_at.strftime("%B %d, %Y") %></td>
                   <td>edit | delete</td>
                 </tr>
+                <% if !contribution.comment.blank? %>
+                  <tr>
+                    <td colspan="6"  class="hiddenRow"><div id="collapseComment<%= index %>" class="accordian-body collapse"><%= contribution.comment %></div></td>
+                  </tr>
+                <% end %>
               <% end %>
             </tbody>
           </table>
@@ -217,9 +229,7 @@
                 <th>Actions</th>
               </tr>
             </thead>
-            <tbody>
-              <tr id='offline_contributions'>
-              </tr>
+            <tbody id='offline_contributions'>
               <% @event.contributions.where(:contribution_type => 'offline').each do |contribution| %>
               <tr>
                 <td><%= contribution.contributor %></td>
