--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
   <body>
     <%= render 'shared/nav' %>
+    <%= render 'layouts/messages' %>
     <div class='container mt-1'>
           <%= yield %>
     </div>
