--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,11 +2,17 @@
   <%= link_to 'Navbar', root_path, class: 'navbar-brand' %>
   <ul class='nav navbar-nav'>
     <li class='nav-item'><%= link_to 'Events', events_path, class: 'nav-link'%></li>
-    <li class='nav-item'><%= link_to 'Organizations', root_path, class: 'nav-link'%></li>
+    <li class='nav-item'><%= link_to 'Organizations', organizations_path, class: 'nav-link'%></li>
     <li class='nav-item'><%= link_to 'Users', root_path, class: 'nav-link'%></li>
   </ul>
   <ul class='nav navbar-nav float-xs-right'>
-    <li class='nav-item'><%= link_to(root_path, class: 'nav-link') do %><i class='fa fa-user-plus'></i> Sign Up <% end %></li>
-    <li class='nav-item'><%= link_to(root_path, class: 'nav-link') do %><i class='fa fa-sign-in'></i> login <% end %></li>
+    <% if logged_in? %>
+      <li class='nav-item'><%= link_to(logout_path, class: 'nav-link') do %><i class="fa fa-sign-out" aria-hidden="true"></i> Signout<% end %></li>
+    <% else %>
+      <li class='nav-item'><%= link_to(register_path, class: 'nav-link') do %><i class='fa fa-user-plus'></i> Sign Up <% end %></li>
+      <li class='nav-item'><%= link_to(login_path, class: 'nav-link') do %><i class='fa fa-sign-in'></i> login <% end %></li>
+    <% end %>
+    
+
   </ul>
 </nav>
