--- a/app/views/events/event_attributes.html.erb
+++ b/app/views/events/event_attributes.html.erb
@@ -1,7 +1,8 @@
 <!-- Nav tabs -->
 <div class='row'>
   <div class='col-xs-12'>
-    <ul class="nav nav-pills" role="tablist">
+    <div class='card card-rel'>
+    <ul class="nav nav-pills py-1 header-primary" role="tablist">
       <li class="nav-item">
         <a class="nav-link active" data-toggle="tab" href="#summary" role="tab">Summary</a>
       </li>
@@ -21,6 +22,7 @@
         <a class="nav-link" data-toggle="tab" href="#contributions" role="tab">Contributions</a>
       </li>
     </ul>
+    </div>
   </div>
 </div>
 
