--- a/app/views/attendees/_form.html.erb
+++ b/app/views/attendees/_form.html.erb
@@ -47,7 +47,7 @@
     </div>
   </div>
 </div>
-
+<%= f.hidden_field :user_id, :value => current_user.id %>
 <!--<div class='row'>-->
 <!--  <div class='col-md-6 offset-md-3'>-->
 <!--    <div class='card card-block square-item'>-->
