--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,3 @@
-<%= render 'layouts/messages' %>
-
 <%= render 'admin/event_admin', event: @event %>
   <%= link_to(events_path, class: 'btn btn-primary') do %>
     <i class='fa fa-chevron-circle-left'></i> Back to Events
@@ -195,7 +193,7 @@
     <div class="row py-1 px-1">
       <h5>Achieved</h5>
       <h3><%= number_to_currency(@event.raised) %></h3>
-      <progress class="progress progress-danger" value="<%= @event.percent_remaining %>" max="100"></progress>
+      <progress id='raised_progress' class="progress progress-danger" value='0'  max="100"></progress>
       <h4>Goal: <%= number_to_currency(@event.goal) %></h4>
     </div>
     <div class="row" style='background-color:#474747; color:white; padding-top: 8px; padding-bottom: 5px;'>
@@ -215,7 +213,7 @@
     <div class='row'>
       <ul class="list-unstyled pl-1 pt-1">
         <% @top_fundraisers.each do |fundraiser| %>
-          <li><strong>Anonymous</strong> <%= number_to_currency(fundraiser.amount) %></li>
+          <li><strong><% if fundraiser.user_id.nil? %>Anonymous <% else %> <%= fundraiser.user.full_name %> <% end %></strong> <%= number_to_currency(fundraiser.amount) %></li>
         <% end %>
       </ul>
     </div>
@@ -234,3 +232,29 @@
 
   </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    var progressbar = $('#raised_progress'),
+    max = <%= @event.percent_remaining %>,
+   value =  $('#raised_progress').val(),
+  time = (1000/max)*.5;
+
+   var loading = function() {
+      value += 1;
+      addValue = progressbar.val(value);
+       
+      $('.progress-value').html(value + '%');
+ 
+      if (value == max) {
+          clearInterval(animate);                
+      }
+    };
+ 
+    var animate = setInterval(function() {
+      loading();
+    }, time);
+  });
+  
+  // <#%= @event.percent_remaining %>
+</script>
