--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,6 +1,6 @@
 <nav class='navbar navbar-full navbar-dark bg-inverse'>
   <%= link_to 'Navbar', root_path, class: 'navbar-brand' %>
-  <ul class='nav navbar-nav'>
+  <ul class='nav navbar-nav hidden-sm-down'>
     <li class='nav-item'><%= link_to 'Events', events_path, class: 'nav-link'%></li>
     <li class='nav-item'><%= link_to 'Organizations', organizations_path, class: 'nav-link'%></li>
     <li class='nav-item'><%= link_to 'Users', root_path, class: 'nav-link'%></li>
