--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,10 +1,35 @@
 <%= form_for(user) do |f| %>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %>
-  
-  <%= f.label :password %>
-  <%= f.password_field :password %>
-  
-  <%= f.submit %>
+<div class='col-md-6 offset-md-3 mt-3'>
+  <div class='card card-rel text-xs-center'>
+    <div class='header header-primary'>
+      <h3>Signup</h3> 
+      <ul class='nav nav-inline pt-1'>
+        <li class='nav-item'><a href='#' class='nav-link'><i class='fa fa-facebook-official w social-icon'></i></a></li>
+        <li class='nav-item'><a href='#' class='nav-link'><i class='fa fa-twitter w social-icon'></i></a></li>
+        <li class='nav-item'><a href='#' class='nav-link'><i class='fa fa-google-plus w social-icon'></i></a></li>
+      </ul>
+    </div>
+    
+    <p class='text-divide'>Or Be Classical</p>
+    <div class="input-group px-3 py-1">
+      <div class="input-group-addon"><i class='fa fa-user'></i></div>
+      <%= f.fields_for :profile do |ff| %>
+        <%= ff.text_field :first_name, class: 'form-control', placeholder: 'First Name', autofocus: true %>
+      <% end %>
+    </div>
+
+    <div class="input-group px-3 py-1">
+      <div class="input-group-addon"><i class='fa fa-envelope'></i></div>
+      <%= f.email_field :email, class: 'form-control', placeholder: 'Email' %>
+    </div>
+      
+    <div class="input-group px-3 py-1">
+      <div class="input-group-addon"><i class='fa fa-lock'></i></div>
+      <%= f.password_field :password, class: 'form-control', placeholder: 'Password' %>
+    </div>
+    <%= f.submit 'Get Started', class: 'btn btn-outline-primary mt-1 mb-2' %>
+    </div>
+  </div>
+</div>
 <% end %>
