--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -148,3 +148,21 @@ body {
 .card-rel .nav-pills .nav-link {
     color: white;
 }
+
+.main-raised {
+    margin: 110px 30px 0px;
+    position: relative;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    background-color: white;
+}
+
+.img-raised {
+    position: relative;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+    margin: -100px;
+    border-radius: 60%;
+}
+
+.raised-content {
+    margin-top: 150px;
+}
